# bwi_lab

./: .gitignore  LICENSE  README.md
bwi_local/: CMakeLists.txt  README.rst  package.xml  setup.py
bwi_local/completion/: bwi_local-completion.bash
bwi_local/scripts/: authorize_local  bags  bwi  clone_server  distance_traveled  keygen  list_bags  plot_distance  trace_arguments  update_local  yaml_index
bwi_local/src/bwi_local/: bagfile.py
bwilab_scripts/: CMakeLists.txt  README.rst  package.xml  setup.py
bwilab_scripts/scripts/: distance_traveled  keygen  upload
bwilab_scripts/src/authorization/: bwilab.cpp
