<?xml version="1.0"?>
<package format="2">

  <name>bwi_local</name>
  <version>0.0.0</version>
  <description>
    BWI lab administration scripts.

    These administration scripts and programs are used by the
    Building-Wide Intelligence project of the University of Texas at
    Austin.  They are used to share information between various robots
    and lab machines in a relatively secure manner.
  </description>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/bwi_scripts</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_scripts/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>openssh-client</exec_depend>
  <exec_depend>python-dateutil</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
