<?xml version="1.0"?>
<package format="2">

  <name>bwilab_scripts</name>
  <version>0.0.0</version>
  <description>
    Privileged BWI lab administration scripts.

    These are privileged administration scripts and programs are used
    by the Building-Wide Intelligence project of the University of
    Texas at Austin.  They are used to share information between
    various robots and lab machines in a relatively secure manner
    using the local "bwilab" user ID.
  </description>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/bwi_scripts</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_scripts/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
